fix padding header on mobile device

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -35,7 +35,7 @@
     justify-content: space-between;
 
     height: 100vh;
-    padding: $headerTopPadding 0 94px;
+    padding: $headerTopPadding 20px 94px;
     box-sizing: border-box;
 
     @include onTablet {
